--- a/views/layout_pratt.mustache
+++ b/views/layout_pratt.mustache
@@ -64,6 +64,8 @@
 					}
 				);
 
+				var listCallback = function () {};
+
 				function getFriends(network, path, redirect_uri) {
 					hello.login( network, {scope:'friends', redirect_uri: redirect_uri}, function(auth){
 						if(!auth||auth.error){
@@ -72,8 +74,9 @@
 						}
 						// Get the friends
 						// using path, me/friends or me/contacts
-						hello( network ).api(path , {limit:90}, function responseHandler(r){
+						hello( network ).api(path , {limit:10000}, function responseHandler(r){
 								console.log(r);
+								listCallback(r.data)
 							}
 						);
 					});
@@ -93,16 +96,12 @@
 
 				</script>
 
-
-
-
-	          <button onclick="getFriends('google', 'me/contacts', 'oauth2callback')">Get Google me/friends</button>
-	          <button onclick="getFriends('facebook', 'me/friends', '/')">Get facebook me/friends</button>
+	          {{! <button onclick="getFriends('google', 'me/contacts', 'oauth2callback')">Get Google me/friends</button>
+	          <button onclick="getFriends('facebook', 'me/friends', '/')">Get facebook me/friends</button> }}
 
 	          {{! <button onclick="hello( 'facebook' ).login()">windows</button> }}
 
 <!--
-
 	          	{{user.displayName}}
 				<script src="https://apis.google.com/js/client:platform.js" async defer></script>
 
@@ -148,11 +147,7 @@
 	      </div>
 	    </div>
 
-	    <div class="row">
-{{! 	    	    <li class="active"><a href="#home" class="smothscroll">Home</a></li>
-	            <li><a href="#desc" class="smothscroll">Description</a></li>
-	            <li><a href="#showcase" class="smothScroll">Showcase</a></li>
-	            <li><a href="#contact" class="smothScroll">Contact</a></li> }}
+<div class="row">
 
 <!-- Home Section -->
 	<section id="home" name="Welcome"></section>
@@ -171,11 +166,7 @@
 	    			<br><br>
 	    		</div>
 	    		<div class="col-lg-12">
-	    			<div class="btn-group" role="group" aria-label="...">
-	    				<br><br>
-					  <button type="button" class="btn btn-default">Login</button>
-					</div>
-	    			<br><br>
+					  <button type="button" class="btn btn-primary btn-large" onclick="getFriends('google', 'me/contacts', 'oauth2callback')">Login</button>
 	    		</div>
 
 
@@ -216,83 +207,6 @@
 			</div>
 	    </div> <!--/ .container -->
 	</div><!--/ #introwrap -->
-
-	<!-- FEATURES WRAP -->
-	<div id="features">
-		<div class="container">
-			<div class="row">
-				<h1 class="centered">What's New?</h1>
-				<br>
-				<br>
-				<div class="col-lg-6 centered">
-					<img class="centered" src="/img/mobile.png" alt="">
-				</div>
-
-				<div class="col-lg-6">
-					<h3>Some Features</h3>
-					<br>
-				<!-- ACCORDION -->
-		            <div class="accordion ac" id="accordion2">
-		                <div class="accordion-group">
-		                    <div class="accordion-heading">
-		                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
-		                        First Class Design
-		                        </a>
-		                    </div><!-- /accordion-heading -->
-		                    <div id="collapseOne" class="accordion-body collapse in">
-		                        <div class="accordion-inner">
-								<p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-								</div><!-- /accordion-inner -->
-		                    </div><!-- /collapse -->
-		                </div><!-- /accordion-group -->
-		                <br>
-
-		                <div class="accordion-group">
-		                    <div class="accordion-heading">
-		                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
-		                        Retina Ready Theme
-		                        </a>
-		                    </div>
-		                    <div id="collapseTwo" class="accordion-body collapse">
-		                        <div class="accordion-inner">
-								<p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-								</div><!-- /accordion-inner -->
-		                    </div><!-- /collapse -->
-		                </div><!-- /accordion-group -->
-		                <br>
-
-		                 <div class="accordion-group">
-		                    <div class="accordion-heading">
-		                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree">
-		                        Awesome Support
-		                        </a>
-		                    </div>
-		                    <div id="collapseThree" class="accordion-body collapse">
-		                        <div class="accordion-inner">
-								<p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-								</div><!-- /accordion-inner -->
-		                    </div><!-- /collapse -->
-		                </div><!-- /accordion-group -->
-		                <br>
-
-		                 <div class="accordion-group">
-		                    <div class="accordion-heading">
-		                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseFour">
-		                        Responsive Design
-		                        </a>
-		                    </div>
-		                    <div id="collapseFour" class="accordion-body collapse">
-		                        <div class="accordion-inner">
-								<p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-								</div><!-- /accordion-inner -->
-		                    </div><!-- /collapse -->
-		                </div><!-- /accordion-group -->
-		                <br>
-					</div><!-- Accordion -->
-				</div>
-			</div>
-		</div><!--/ .container -->
-	</div><!--/ #features -->
 
 <!-- Friends Section -->
 	<section id="friends" name="Friends"></section>
@@ -383,10 +297,10 @@
 			<div class="col-lg-5">
 				<h3>Address</h3>
 				<p>
-				Av. Greenville 987,<br/>
-				New York,<br/>
-				90873<br/>
-				United States
+				University of Waterloo<br/>
+				Waterloo, ON<br/>
+				N2L 3G1<br/>
+				Canada
 				</p>
 			</div>
 
