Small changes to text

--- a/views/layout_pratt.mustache
+++ b/views/layout_pratt.mustache
@@ -177,7 +177,7 @@
 	    		<div class="col-lg-12">
 					<br><br><br><br>
 					<h1>Welcome To <b>JustLunchMe</b></h1>
-					<h3>Reunite with friends. Be happy.</h3>
+					<h3>Reunite with friends. It's like real life Skype.</h3>
 					<br>
 	    		</div>
 	    		<div class="col-lg-12">
@@ -299,7 +299,10 @@
 		    		<div id='calendar'></div>
 	    			{{! <img style="margin: auto" class="img-responsive" src="/img/calendar_placeholder.png" alt=""> }}
 	    		</div>
-	    		<br><br>
+	    		<div class="col-lg-12">
+					<h4>Please choose at least a 1 hour time slot. We'll try to match you as late as possible in your selected time slot.</h4>
+	    		</div>
+	    		<br>
 	    	</div>
 	    </div> <!--/ .container -->
 	    <br>
@@ -321,40 +324,6 @@
 
 <!-- Contact Section -->
 	<section id="contact" name="contact"></section>
-	<div id="footerwrap" style="display:none">
-		<div class="container">
-			<div class="col-lg-5">
-				<h3>Address</h3>
-				<p>
-				Av. Greenville 987,<br/>
-				New York,<br/>
-				90873<br/>
-				United States
-				</p>
-			</div>
-
-			<div class="col-lg-7">
-				<h3>Drop Us A Line</h3>
-				<br>
-				<form role="form" action="#" method="post" enctype="plain">
-				  <div class="form-group">
-				    <label for="name1">Your Name</label>
-				    <input type="name" name="Name" class="form-control" id="name1" placeholder="Your Name">
-				  </div>
-				  <div class="form-group">
-				    <label for="email1">Email address</label>
-				    <input type="email" name="Mail" class="form-control" id="email1" placeholder="Enter email">
-				  </div>
-				  <div class="form-group">
-				  	<label>Your Text</label>
-				  	<textarea class="form-control" name="Message" rows="3"></textarea>
-				  </div>
-				  <br>
-				  <button type="submit" class="btn btn-large btn-success">SUBMIT</button>
-				</form>
-			</div>
-		</div>
-	</div>
 	<div id="c">
 		<div class="container">
 			<p>Created by <a href="http://www.malcolmocean.com">Malcolm Ocean</a>, Will Cullen and <a href="https://ca.linkedin.com/pub/noah-maccallum/31/949/227">Noah MacCallum</a> at the University of Waterloo for the Winter 2015 <a href=http://www.kik.com/>Kik Hackathon.</a> All code is open source and available on Github.</p>
