google auth working

--- a/views/layout_pratt.mustache
+++ b/views/layout_pratt.mustache
@@ -53,19 +53,21 @@
 
 	          <script class="pre" src="/hello.min.js"></script>
 
+	          <script src="https://apis.google.com/js/client:platform.js" async defer></script>
+
 				<script class="pre">
 				hello.init( {
 						google : '791651266422-0rgikd8j6ls8cn70000i2vgumokps6ej.apps.googleusercontent.com',
 						facebook : '871627882901365',
 					}
 					, {
-						redirect_uri:'redirect.html',
-						scope:"friends"
+						redirect_uri:'oauth2callback',
+						scope: ["friends", "email"]
 					}
 				);
 
 				function getFriends(network, path, redirect_uri) {
-					hello.login( network, {scope:'friends', redirect_uri: redirect_uri}, function(auth){
+					hello.login( network, {scope:['email', 'friends'], redirect_uri: redirect_uri}, function(auth){
 						if(!auth||auth.error){
 							console.log("Signin aborted");
 							return;
@@ -79,16 +81,25 @@
 					});
 				}
 
-				// hello.on('auth.login', function(auth){
-				//     // call user information, for the given network
-				//     hello( auth.network ).api( '/me/contacts' ).then( function(r){
-				//         console.log(r);
-				//     });
+				hello.on('auth.login', function(auth){
+					console.log('login success');
 
-				// 	hello( auth.network ).api( '/me/friends').then( function(r){
-				//         console.log(r);
-				//     });
-				// });
+				    // call user information, for the given network
+				    hello( auth.network ).api('/me' , function(r){
+						console.log('this user with email');
+						console.log(r);
+					});
+
+					hello( auth.network ).api( '/me/friends', {limit:100}, function(r){
+						console.log('google plus friends');
+				        console.log(r);
+				    });
+
+				    hello( auth.network ).api( '/me/contacts', {limit:5000}, function(r){
+				    	console.log('google contacts');
+				        console.log(r);
+				    });
+				});
 
 
 				</script>
@@ -99,40 +110,37 @@
 	          <button onclick="getFriends('google', 'me/contacts', 'oauth2callback')">Get Google me/friends</button>
 	          <button onclick="getFriends('facebook', 'me/friends', '/')">Get facebook me/friends</button>
 
-	          {{! <button onclick="hello( 'facebook' ).login()">windows</button> }}
-
-<!--
-
+<!-- 
 	          	{{user.displayName}}
-				<script src="https://apis.google.com/js/client:platform.js" async defer></script>
+				
 
 				<script>
 				function signInCallback(authResult) {
-					console.log(authResult);
+					//console.log(authResult);
 				  if (authResult.code) {
 				    $.post('/auth/google/callback', { code: authResult.code})
 				    .done(function(data) {
+				    	console.log('done auth callback');
 				    	console.log(data);
 
-				    	gapi.client.load('plus','v1', function(){
-						 var request = gapi.client.plus.people.list({
-						   'userId': 'me',
-						   'collection': 'visible'
-						 });
-						 request.execute(function(resp) {
-						   console.log(resp);
-						 });
+				      $('#signinButton').hide();
+
+
+				      gapi.client.load('oauth2', 'v2', function() {
+						  gapi.client.oauth2.userinfo.get().execute(function(resp) {
+						    // Shows user email
+						    console.log(resp.email);
+						  })
 						});
 
-				      $('#signinButton').hide();
 				    });
 				  } else if (authResult.error) {
 				    console.log('There was an error: ' + authResult.error);
 				  }
 				};
-				</script>
+				</script> 
 
-				<div id="signinButton">
+		  		<div id="signinButton" style="display:none;">
 				  <span class="g-signin"
 				    data-scope="https://www.googleapis.com/auth/plus.login"
 				    data-clientid="791651266422-0rgikd8j6ls8cn70000i2vgumokps6ej.apps.googleusercontent.com"
@@ -141,8 +149,8 @@
 				    data-cookiepolicy="single_host_origin"
 				    data-callback="signInCallback">
 				  </span>
-				</div>
-				<div id="result"></div> -->
+				</div> -->
+				<div id="result"></div> 
 	          </div>
 	        </div><!--/.nav-collapse -->
 	      </div>
