--- a/views/index.mustache
+++ b/views/index.mustache
@@ -1,5 +1,4 @@
 <div class="container" ng-controller="UserPickerCtrl">
-  <h1>Who do you want to have lunch with?</h1>
   <div class="row">
     <div class="col-md-6">
       <div class="adder-box">
@@ -33,14 +32,22 @@
       </div>
     </div>
     <div class="col-md-6">
-      <h3>Your lunch list <span style="font-size: 16px; color: rgba(255,255,255,0.7)">(The people with whom you might get matched.)</span></h3>
-      <p class="help-block"></p>
+      <h3>Your lunch list</h3>
+      <span class="subtitle">(The people with whom you might get matched.)</span>
       <ul class="lunch-list" ng-cloak>
         <li ng-repeat="friend in lunchList">
-        {[{friend.email}]}
-        <span class="badge" style="float:right" ng-show="friend.hasApp">
-          <span class="glyphicon glyphicon-ok"></span>
-        </span>
+          <a>
+            <span ng-show="friend.name">{[{friend.name}]} <span class="grey">({[{friend.email}]})</span></span>
+            <span ng-hide="friend.name">{[{friend.email}]}</span>
+            <button class="remove-friend" ng-hide="friend.deleting" ng-click="removeFromList(friend)">
+              <span class="glyphicon glyphicon-remove"></span>
+            </button>
+            <span ng-show="friend.deleting" style="float:right; position:relative; top:-1px; left:6px">
+              <img src="/img/redloader.gif" />
+            </span>
+            {{! <span class="badge" style="float:right; background: red"> }}
+            {{! </span> }}
+          </a>
         </li>
       </ul>
     </div>
