--- a/views/layout_pratt.mustache
+++ b/views/layout_pratt.mustache
@@ -90,8 +90,8 @@
 						// Get the friends
 						// using path, me/friends or me/contacts
 						hello( network ).api(path , {limit:10000}, function responseHandler(r){
-								console.log(r);
-								listCallback(r.data)
+								console.log('hello!', r);
+								listCallback(r.data);
 							}
 						);
 					});
@@ -181,7 +181,7 @@
 	    			<br><br>
 	    		</div>
 	    		<div class="col-lg-12">
-					  <button type="button" class="btn btn-primary btn-large" onclick="getFriends('google', 'me/contacts', 'oauth2callback')">Login</button>
+					  <button type="button" class="btn btn-login btn-large" onclick="getFriends('google', 'me/contacts', 'oauth2callback')">Login</button>
 	    		</div>
 
 
@@ -230,44 +230,20 @@
 	    <div class="container">
 	    	<div class="row centered">
 	    		<div class="col-lg-12">
-					<h1>Friend List</h1>
+					{{! <h1>Friend List</h1> }}
+					<h1>Who do you want to have lunch with?</h1>
 					<br>
 	    		</div>
     		</div>
 			{{{yield}}}
-    		<div class="row centered">
+    		<div class="row centered" style="display: none">
 	    		<div class="col-lg-6">
 	    			<h2>Notifications</h2>
-					<div class="list-group list-left-align">
-					     <a href="#" class="list-group-item"><span class="badge">Add</span>     <span class="badge">Ignore</span> Person 1
-					  </a>
-					  <a href="#" class="list-group-item">Person 2</a>
-					</div>
-
-					<h2>Add Friends</h2>
-					<div class="list-group">
-					  <a href="#" class="list-group-item">Person 1
-					  </a>
-					  <a href="#" class="list-group-item">Person 2</a>
-					  <a href="#" class="list-group-item">Person 3</a>
-					  <a href="#" class="list-group-item">Person 4</a>
-					  <a href="#" class="list-group-item">Person 5</a>
-					</div>
-	    		</div>
-	    		<div class="col-lg-6">
-	    			<h2>Your Friends</h2>
-					<div class="list-group">
-					  <a href="#" class="list-group-item">Person 1
-					  </a>
-					  <a href="#" class="list-group-item">Person 2</a>
-					  <a href="#" class="list-group-item">Person 3</a>
-					  <a href="#" class="list-group-item">Person 4</a>
-					  <a href="#" class="list-group-item">Person 5</a>
-					  <a href="#" class="list-group-item">Person 6</a>
-					  <a href="#" class="list-group-item">Person 7</a>
-					  <a href="#" class="list-group-item">Person 8</a>
-					</div>
-					<br>
+						<div class="list-group list-left-align">
+						     <a href="#" class="list-group-item"><span class="badge">Add</span>     <span class="badge">Ignore</span> Person 1
+						  </a>
+						  <a href="#" class="list-group-item">Person 2</a>
+						</div>
 	    		</div>
 	    	</div>
 	    </div> <!--/ .container -->
