--- a/public/css/main_pratt.css
+++ b/public/css/main_pratt.css
@@ -74,9 +74,13 @@ a:after {
 
 /* Overall headerwrap */
 body {
-    background: url(/img/women_lunch1.jpg) center;
+    background-color: #001030;
+    background-image: url(/img/women_lunch1.jpg);
     background-size: 100%;
     background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position: top center;
+    background-origin: content-box;
 }
 #headerwrap {
     background: transparent;
@@ -90,14 +94,14 @@ body {
     margin-top: 30px;
     color: white;
     font-size: 75px;
-    
+
 }
 
 #headerwrap h2 {
     margin-top: 30px;
     color: white;
     font-size: 50px;
-    
+
 }
 
 #headerwrap h3 {
