--- a/views/layout_pratt.mustache
+++ b/views/layout_pratt.mustache
@@ -19,7 +19,7 @@
 
   <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
-
+  <link href='css/fullcalendar.css' rel='stylesheet' />
   <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.2.6/fullcalendar.min.js"></script>
@@ -229,7 +229,7 @@
         {{! <img style="margin: auto" class="img-responsive" src="/img/calendar_placeholder.png" alt=""> }}
       </div>
       <div class="col-lg-12">
-        <h4>Please choose at least a 1 hour time slot. We'll try to match you as late as possible in your selected time slot.</h4>
+        <h4>Please choose slots at least 1h long. We'll try to match you as late as possible in the day.</h4>
       </div>
       <br>
     </div>
@@ -276,10 +276,6 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular-strap/2.0.0/angular-strap.tpl.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
     <script src="/js/index.js"></script>
-
-    <link href='css/fullcalendar.css' rel='stylesheet' />
-
-
     <script>
       $(function() {
         $('#calendar').fullCalendar({
@@ -319,12 +315,16 @@
           eventClick: function (calEvent, jsEvent, view) {
             console.log("calEvent", calEvent);
             $('#calendar').fullCalendar('removeEvents', calEvent._id);
+            $.post('/'+user.email+'/deletetimeslot', {
+              start: calEvent.start.format().substr(0,19),
+              end: calEvent.end.format().substr(0,19),
+            });
           },
           timezone: 'local',
           editable: true,
           eventLimit: true, // allow "more" link when too many events
         });
-});
+      });
 </script>
 </body>
 </html>
