fix some crashes etc

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -49,6 +49,9 @@
             {{! </span> }}
           </a>
         </li>
+        <li ng-hide="lunchList.length" style="color: #666; text-align: center; padding: 6px 12px; opacity: 0.8">
+          (Your list is empty... click or search on the left to add someone!)
+        </li>
       </ul>
     </div>
   </div>
