textshadow on title

--- a/views/layout_pratt.mustache
+++ b/views/layout_pratt.mustache
@@ -189,7 +189,7 @@ var user = {};
   <div id="headerwrap">
     <div class="container">
       <div class="row centered">
-        <div class="col-lg-12">
+        <div class="col-lg-12" style="text-shadow: 0 0 3px black">
           <br><br><br><br>
           <h1>{{! Welcome To  }}<b>JustLunchMe</b></h1>
           <h3>Reunite with friends. It's like real life Hangouts.</h3>
